crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__type_decls.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"type Num = number;\")"
---
Ok(
    Program {
        body: [
            TypeDecl {
                span: 0..18,
                declare: false,
                id: Ident {
                    span: 5..8,
                    name: "Num",
                },
                type_ann: Prim(
                    PrimType {
                        span: 11..17,
                        prim: Num,
                    },
                ),
                type_params: None,
            },
        ],
    },
)
