crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__types-3.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let str_arr: string[] = []\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 4..26,
                pattern: Ident(
                    BindingIdent {
                        span: 4..11,
                        id: Ident {
                            span: 4..11,
                            name: "str_arr",
                        },
                    },
                ),
                type_ann: Some(
                    Array(
                        ArrayType {
                            span: 13..21,
                            elem_type: Prim(
                                PrimType {
                                    span: 13..19,
                                    prim: Str,
                                },
                            ),
                        },
                    ),
                ),
                init: Some(
                    Tuple(
                        Tuple {
                            span: 24..26,
                            elems: [],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
