crates/crochet_tree_sitter_parser/src/snapshots/crochet_tree_sitter_parser__tests__types-4.snap
---
source: crates/crochet_tree_sitter_parser/src/lib.rs
expression: "parse(\"let thunk_arr: (() => undefined)[] = []\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 4..39,
                pattern: Ident(
                    BindingIdent {
                        span: 4..13,
                        id: Ident {
                            span: 4..13,
                            name: "thunk_arr",
                        },
                    },
                ),
                type_ann: Some(
                    Array(
                        ArrayType {
                            span: 15..34,
                            elem_type: Lam(
                                LamType {
                                    span: 16..31,
                                    params: [],
                                    ret: Keyword(
                                        KeywordType {
                                            span: 22..31,
                                            keyword: Undefined,
                                        },
                                    ),
                                    type_params: None,
                                },
                            ),
                        },
                    ),
                ),
                init: Some(
                    Tuple(
                        Tuple {
                            span: 37..39,
                            elems: [],
                        },
                    ),
                ),
                declare: false,
            },
        ],
    },
)
